--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,15 @@ before_install:
   - bash init_update_libs.sh
 
 script: "./android_build.sh"
+
+after_script:
+  - sh wrap_release.sh
+
+deploy:
+  provider: releases
+  api_key:
+    - secure: F641jf9qyiyGe7lUV5md0dq/UN3FdOY3FDcFaRD3JlJoLuxuZT5ghVvRPtqNYUmmbvYYUpQ7mMqww3KyiGHoFYAljlUBXWE5HFVXy54qvhyjUyWKUxiAmXaqZE8xCXEdS3t3MkOeb9jxq2vCGJMCelG6Iq05ts4cMCw3r/2gEKE=
+  file: "ffmpeg-android.tar.gz"
+  skip_cleanup: true
+  on:
+    tags: true
