--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,7 @@ before_install:
   - bash init_update_libs.sh
 
 script: "./android_build.sh"
-
-after_script:
-  - sh wrap_release.sh
+after_script: "./wrap_release.sh"
 
 deploy:
   provider: releases
